--- a/S1/J4/TP_final/app/templates/register.html
+++ b/S1/J4/TP_final/app/templates/register.html
@@ -3,18 +3,26 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<h1>Register</h1>
-<form method="POST">
-    <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" class="form-control" id="username" name="username">
+<div class="card mx-auto" style="max-width: 400px;">
+    <div class="card-header bg-success text-white text-center">
+        Register
     </div>
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" id="password" name="password">
+    <div class="card-body">
+        <form method="POST">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" id="username" name="username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
+            <button type="submit" class="btn btn-success btn-block">Register</button>
+        </form>
     </div>
-    <!-- Removed manual role and status inputs -->
-    <button type="submit" class="btn btn-primary">Register</button>
-</form>
-<p>Already have an account? <a href="{{ url_for('main.login') }}">Login here</a>.</p>
+</div>
+<div class="text-center mt-3">
+    <span>Already have an account?</span>
+    <a href="{{ url_for('main.login') }}" class="btn btn-primary ml-2">Login here</a>
+</div>
 {% endblock %}
