--- a/S1/J4/TP_final/app/templates/login.html
+++ b/S1/J4/TP_final/app/templates/login.html
@@ -3,17 +3,26 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1>Login</h1>
-<form method="POST">
-    <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" class="form-control" id="username" name="username">
+<div class="card mx-auto" style="max-width: 400px;">
+    <div class="card-header bg-primary text-white text-center">
+        Login
     </div>
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" id="password" name="password">
+    <div class="card-body">
+        <form method="POST">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" id="username" name="username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
-<p>Don't have an account? <a href="{{ url_for('main.register') }}">Register here</a>.</p>
+</div>
+<div class="text-center mt-3">
+    <span>Don't have an account?</span>
+    <a href="{{ url_for('main.register') }}" class="btn btn-success ml-2">Register here</a>
+</div>
 {% endblock %}
